add user and role

--- a/borrowlist.html
+++ b/borrowlist.html
@@ -440,11 +440,11 @@
                             </a>
                             <ul class="sub">
                                 <li><a class="alast" href="">前台用户</a></li>
-                                <li><a class="alast" href="">后台用户</a></li>
+                                <li><a class="alast" href="userlist.html">后台用户</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a class="apl40" href="javascript:;">
+                            <a class="apl40" href="role.html">
                                 <i class="fa fa-male"></i>
                                 <span>角色管理</span>
                             </a>
