--- a/finance/rechargelist.html
+++ b/finance/rechargelist.html
@@ -8,29 +8,29 @@
     <link rel="shortcut icon" href="images/favicon.png">
     <title>后台管理系统</title>
     <!--Core CSS -->
-    <link href="bs3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-reset.css" rel="stylesheet">
-    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="../bs3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap-reset.css" rel="stylesheet">
+    <link href="../assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-fileupload/bootstrap-fileupload.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-wysihtml5/bootstrap-wysihtml5.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-datepicker/css/datepicker.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-timepicker/compiled/timepicker.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-colorpicker/css/colorpicker.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-daterangepicker/daterangepicker-bs3.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-datetimepicker/css/datetimepicker.css" />
-    <link rel="stylesheet" type="text/css" href="assets/jquery-multi-select/css/multi-select.css" />
-    <link rel="stylesheet" type="text/css" href="assets/jquery-tags-input/jquery.tagsinput.css" />
-    <link rel="stylesheet" type="text/css" href="assets/select2-master/select2.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-fileupload/bootstrap-fileupload.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-wysihtml5/bootstrap-wysihtml5.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-datepicker/css/datepicker.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-timepicker/compiled/timepicker.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-colorpicker/css/colorpicker.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-daterangepicker/daterangepicker-bs3.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-datetimepicker/css/datetimepicker.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/jquery-multi-select/css/multi-select.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/jquery-tags-input/jquery.tagsinput.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/select2-master/select2.css" />
     <!-- radio -->
-    <link href="assets/iCheck-master/skins/minimal/blue.css" rel="stylesheet">
+    <link href="../assets/iCheck-master/skins/minimal/blue.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/style-responsive.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/style-responsive.css" rel="stylesheet" />
     
     <!-- MyStyle -->
-    <link rel="stylesheet" type="text/css" href="css/xjs.css" />
+    <link rel="stylesheet" type="text/css" href="../css/xjs.css" />
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="js/ie8/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -47,7 +47,7 @@
 <!--logo start-->
 <div class="brand">
     <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="">
+        <img src="../images/logo.png" alt="">
     </a>
     <div class="sidebar-toggle-box">
         <div class="fa fa-bars"></div>
@@ -60,7 +60,7 @@
         <!-- user login dropdown start-->
         <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                <img alt="" src="images/avatar1_small.jpg">
+                <img alt="" src="../images/avatar1_small.jpg">
                 <span class="username">John Doe</span>
                 <b class="caret"></b>
             </a>
@@ -103,8 +103,8 @@
                                 <span>融资管理</span>
                             </a>
                             <ul class="sub">
-                                <li><a class="alast" href="opborrow_add.html">融资发布</a></li>
-                                <li><a class="alast" hhref="borrowlist.html">融资初审</a></li>
+                                <li><a class="alast" href="../business/opborrow_add.html">融资发布</a></li>
+                                <li><a class="alast" hhref="../business/borrowlist.html">融资初审</a></li>
                                 <li><a class="alast" href="">融资复审</a></li>
                                 <li><a class="alast" href="">融资预约</a></li>
                                 <li><a class="alast" href="">投标记录</a></li>
@@ -256,11 +256,11 @@
                             </a>
                             <ul class="sub">
                                 <li><a class="alast" href="">前台用户</a></li>
-                                <li><a class="alast" href="userlist.html">后台用户</a></li>
+                                <li><a class="alast" href="../admin/userlist.html">后台用户</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a class="apl40" href="role.html">
+                            <a class="apl40" href="../admin/role.html">
                                 <i class="fa fa-male"></i>
                                 <span>角色管理</span>
                             </a>
@@ -530,57 +530,57 @@
 </section>
 <!-- Placed js at the end of the document so the pages load faster -->
 <!--Core js-->
-<script src="js/lib/jquery-1.8.3.min.js"></script>
-<script src="bs3/js/bootstrap.min.js"></script>
-<script src="js/lib/jquery-ui-1.9.2.custom.min.js"></script>
-<script class="include" type="text/javascript" src="js/accordion-menu/jquery.dcjqaccordion.2.7.js"></script>
-<script src="js/scrollTo/jquery.scrollTo.min.js"></script>
-<script src="assets/easypiechart/jquery.easypiechart.js"></script>
-<script src="assets/jQuery-slimScroll-1.3.0/jquery.slimscroll.js"></script>
-<script src="js/nicescroll/jquery.nicescroll.js"></script>
+<script src="../js/lib/jquery-1.8.3.min.js"></script>
+<script src="../bs3/js/bootstrap.min.js"></script>
+<script src="../js/lib/jquery-ui-1.9.2.custom.min.js"></script>
+<script class="include" type="text/javascript" src="../js/accordion-menu/jquery.dcjqaccordion.2.7.js"></script>
+<script src="../js/scrollTo/jquery.scrollTo.min.js"></script>
+<script src="../assets/easypiechart/jquery.easypiechart.js"></script>
+<script src="../assets/jQuery-slimScroll-1.3.0/jquery.slimscroll.js"></script>
+<script src="../js/nicescroll/jquery.nicescroll.js"></script>
 
-<script src="assets/bootstrap-switch-master/build/js/bootstrap-switch.js"></script>
+<script src="../assets/bootstrap-switch-master/build/js/bootstrap-switch.js"></script>
 
-<script type="text/javascript" src="assets/fuelux/js/spinner.min.js"></script>
-<script type="text/javascript" src="assets/bootstrap-fileupload/bootstrap-fileupload.js"></script>
-<script type="text/javascript" src="assets/bootstrap-wysihtml5/wysihtml5-0.3.0.js"></script>
-<script type="text/javascript" src="assets/bootstrap-wysihtml5/bootstrap-wysihtml5.js"></script>
-<script type="text/javascript" src="assets/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-<script type="text/javascript" src="assets/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js"></script>
-<script type="text/javascript" src="assets/bootstrap-daterangepicker/moment.min.js"></script>
-<script type="text/javascript" src="assets/bootstrap-daterangepicker/daterangepicker.js"></script>
-<script type="text/javascript" src="assets/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
-<script type="text/javascript" src="assets/bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
-<script type="text/javascript" src="assets/jquery-multi-select/js/jquery.multi-select.js"></script>
-<script type="text/javascript" src="assets/jquery-multi-select/js/jquery.quicksearch.js"></script>
+<script type="text/javascript" src="../assets/fuelux/js/spinner.min.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-fileupload/bootstrap-fileupload.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-wysihtml5/wysihtml5-0.3.0.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-wysihtml5/bootstrap-wysihtml5.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-daterangepicker/moment.min.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-daterangepicker/daterangepicker.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
+<script type="text/javascript" src="../assets/jquery-multi-select/js/jquery.multi-select.js"></script>
+<script type="text/javascript" src="../assets/jquery-multi-select/js/jquery.quicksearch.js"></script>
 
-<script type="text/javascript" src="assets/bootstrap-inputmask/bootstrap-inputmask.min.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-inputmask/bootstrap-inputmask.min.js"></script>
 
-<script src="assets/jquery-tags-input/jquery.tagsinput.js"></script>
+<script src="../assets/jquery-tags-input/jquery.tagsinput.js"></script>
 
-<script src="assets/select2-master/select2.js"></script>
-<script src="js/select2/select-init.js"></script>
+<script src="../assets/select2-master/select2.js"></script>
+<script src="../js/select2/select-init.js"></script>
 
 
 <!--common script init for all pages-->
-<script src="js/scripts.js"></script>
-<script src="js/jquery.twbsPagination.js"></script>
+<script src="../js/scripts.js"></script>
+<script src="../js/jquery.twbsPagination.js"></script>
 
-<script src="js/advanced-form/advanced-form.js"></script>
+<script src="../js/advanced-form/advanced-form.js"></script>
 <!--Easy Pie Chart-->
-<script src="assets/easypiechart/jquery.easypiechart.js"></script>
+<script src="../assets/easypiechart/jquery.easypiechart.js"></script>
 <!--Sparkline Chart-->
-<script src="assets/sparkline/jquery.sparkline.js"></script>
+<script src="../assets/sparkline/jquery.sparkline.js"></script>
 <!--jQuery Flot Chart-->
-<script src="assets/flot-chart/jquery.flot.js"></script>
-<script src="assets/flot-chart/jquery.flot.tooltip.min.js"></script>
-<script src="assets/flot-chart/jquery.flot.resize.js"></script>
-<script src="assets/flot-chart/jquery.flot.pie.resize.js"></script>
+<script src="../assets/flot-chart/jquery.flot.js"></script>
+<script src="../assets/flot-chart/jquery.flot.tooltip.min.js"></script>
+<script src="../assets/flot-chart/jquery.flot.resize.js"></script>
+<script src="../assets/flot-chart/jquery.flot.pie.resize.js"></script>
 
-<script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
+<script type="text/javascript" src="../assets/ckeditor/ckeditor.js"></script>
 <!--icheck init radio -->
-<script src="js/icheck/icheck-init.js"></script>
-<script src="assets/iCheck-master/jquery.icheck.js"></script>
+<script src="../js/icheck/icheck-init.js"></script>
+<script src="../assets/iCheck-master/jquery.icheck.js"></script>
 <!--script for this page-->
 <script type="text/javascript">
     $(function () {
