--- a/business/borrowlist.html
+++ b/business/borrowlist.html
@@ -103,14 +103,16 @@
                                 <span>融资管理</span>
                             </a>
                             <ul class="sub">
+                                <li><a class="alast" href="borrow_order.html">融资预约</a></li>
                                 <li><a class="alast" href="opborrow_add.html">融资发布</a></li>
-                                <li class="active"><a class="alast" href="borrowlist.html">融资初审</a></li>
+                                <li><a class="alast" href="borrow_published.html">已发布项目</a></li>
+                                <li  class="active"><a class="alast" href="borrowlist.html">融资初审</a></li>
                                 <li><a class="alast" href="">融资复审</a></li>
-                                <li><a class="alast" href="">融资预约</a></li>
+                                <li><a class="alast" href="">募集中项目</a></li>
                                 <li><a class="alast" href="">投标记录</a></li>
-                                <li><a class="alast" href="">手动流标</a></li>
-                                <li><a class="alast" href="">投标状态</a></li>
+                                <li><a class="alast" href="">融资终审</a></li>
                                 <li><a class="alast" href="">流标记录</a></li>
+                                <li><a class="alast" href="">项目高级搜索</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
@@ -421,41 +423,44 @@
             <div class="nav-title"><span>融资初审</span></div>
         </div> -->
         <div class="tab-list" style="margin-bottom:20px;">
-            <a class="tab-item active">待审核信息</a>
-            <a class="tab-item">全部审核记录</a>
+            <a class="tab-item active">初审待审核</a>
+            <a class="tab-item">已审核信息</a>
         </div>
         <div class="panel-body light-bg">
-            <table class="table table-bordered table-count">
-                <thead>
-                <tr>
-                    <th>募集中项目数</th>
-                    <th>募集项目总金额</th>
-                    <th>已募集金额</th>
-                    <th>待募集金额</th>
-                </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>50</td>
-                        <td>123</td>
-                        <td>123.45</td>
-                        <td>21.23</td>
-                    </tr>
-                </tbody>
-            </table>
+           <!--  <table class="table table-bordered table-count">
+               <thead>
+               <tr>
+                   <th>募集中项目数</th>
+                   <th>募集项目总金额</th>
+                   <th>已募集金额</th>
+                   <th>待募集金额</th>
+               </tr>
+               </thead>
+               <tbody>
+                   <tr>
+                       <td>50</td>
+                       <td>123</td>
+                       <td>123.45</td>
+                       <td>21.23</td>
+                   </tr>
+               </tbody>
+           </table> -->
             <section id="unseen">
                 <div class="panel-body" style="padding-left:0;">
                     <div class="search-box">
                         <form class="form-inline" role="form">
                             <div class="form-group">
+                                <label class="control-label">搜审核项目：</label>
                                 <input type="text" class="form-control" placeholder="输入项目名称">
                             </div>
                             <div class="form-group">
+                                <label class="control-label">借款人：</label>
                                 <input type="text" class="form-control" placeholder="输入姓名或手机号">
                             </div>
                             <div class="form-group">
+                                <label class="control-label">项目状态：</label>
                                 <select class="form-control" id="source6">
-                                    <option value="1">请选择项目状态</option>
+                                    <option value="1">项目状态</option>
                                     <option value="2">等待通过</option>
                                     <option value="3">审核未通过</option>
                                 </select>
@@ -475,7 +480,7 @@
                     <tr>
                         <th>序号</th>
                         <th>项目名称</th>
-                        <th>类型</th>
+                        <th>项目类型</th>
                         <th>借款人</th>
                         <th>期限模式</th>
                         <th>借款期限(天)</th>
@@ -501,7 +506,7 @@
                             <td>2017-08-23 14:37:06</td>
                             <td>初审待审核</td>
                             <td>
-                                <button type="button" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</button>
+                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
                             </td>
                         </tr>
                         <tr>
@@ -517,7 +522,7 @@
                             <td>2017-08-23 14:37:06</td>
                             <td>初审待审核</td>
                             <td>
-                                <button type="button" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</button>
+                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
                             </td>
                         </tr>
                         <tr>
@@ -533,7 +538,7 @@
                             <td>2017-08-23 14:37:06</td>
                             <td>初审待审核</td>
                             <td>
-                                <button type="button" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</button>
+                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
                             </td>
                         </tr>
                         <tr>
@@ -549,7 +554,7 @@
                             <td>2017-08-23 14:37:06</td>
                             <td>初审待审核</td>
                             <td>
-                                <button type="button" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</button>
+                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
                             </td>
                         </tr>
                         <tr>
@@ -565,7 +570,7 @@
                             <td>2017-08-23 14:37:06</td>
                             <td>初审待审核</td>
                             <td>
-                                <button type="button" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</button>
+                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
                             </td>
                         </tr>
                         <tr>
@@ -581,7 +586,7 @@
                             <td>2017-08-23 14:37:06</td>
                             <td>初审待审核</td>
                             <td>
-                                <button type="button" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</button>
+                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
                             </td>
                         </tr>
                     </tbody>
