--- a/business/bidlist.html
+++ b/business/bidlist.html
@@ -83,6 +83,9 @@
         <!-- sidebar menu start-->
         <div class="leftside-navigation">
             <ul class="sidebar-menu" id="nav-accordion">
+                <!-- <li>
+                    <span style="display: block;line-height:30px; text-align:center;">一级菜单</span>
+                </li> -->
                 <li>
                     <a class="" href="index.html">
                         <i class="fa fa-home"></i>
@@ -104,10 +107,10 @@
                                 <li><a class="alast" href="borrow_order.html">融资预约</a></li>
                                 <li><a class="alast" href="opborrow_add.html">融资发布</a></li>
                                 <li><a class="alast" href="borrow_published.html">已发布项目</a></li>
-                                <li  class="active"><a class="alast" href="borrowlist.html">融资初审</a></li>
+                                <li><a class="alast" href="borrowlist.html">融资初审</a></li>
                                 <li><a class="alast" href="reborrowlist.html">融资复审</a></li>
                                 <li><a class="alast" href="raiselist.html">募集中项目</a></li>
-                                <li><a class="alast" href="bidlist.html">投标记录</a></li>
+                                <li class="active"><a class="alast" href="bidlist.html">投标记录</a></li>
                                 <li><a class="alast" href="finaborrowlist.html">融资终审</a></li>
                                 <li><a class="alast" href="abortivelist.html">流标记录</a></li>
                                 <li><a class="alast" href="advanced_search.html">项目高级搜索</a></li>
@@ -416,32 +419,30 @@
 <div class="has-switch" tabindex="0"><div class="switch-on switch-animate"><span class="switch-left switch-success">ON</span><label for="change-color-switch">&nbsp;</label><span class="switch-right switch-danger">OFF</span><input type="checkbox" id="change-color-switch" checked="" data-on="default" data-off="primary"></div></div>
 -->
 <section id="main-content">
-    <section class="wrapper" style="position:relative;">
+    <section class="wrapper">
         <!-- <div class="row nav-wrap">
             <div class="nav-title"><span>融资初审</span></div>
         </div> -->
         <div class="tab-list" style="margin-bottom:20px;">
-            <a class="tab-item active" data-id="audit">初审待审核</a>
-            <a class="tab-item" data-id="hadAudit">已审核信息</a>
+            <a class="tab-item active">投标记录</a>
         </div>
-        <!-- 初审待审核 -->
-        <div class="panel-body light-bg tab-content" id="audit" >
+        <div class="panel-body light-bg">
             <section id="unseen">
                 <div class="panel-body" style="padding-left:0;">
                     <div class="search-box">
                         <form class="form-inline" role="form">
                             <div class="form-group">
-                                <label class="control-label">搜审核项目：</label>
+                                <label class="control-label">投资人：</label>
+                                <input type="text" class="form-control" placeholder="输入投资人姓名">
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">项目名称：</label>
                                 <input type="text" class="form-control" placeholder="输入项目名称">
                             </div>
                             <div class="form-group">
-                                <label class="control-label">借款人：</label>
-                                <input type="text" class="form-control" placeholder="输入姓名或手机号">
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">项目状态：</label>
+                                <label class="control-label">投标状态：</label>
                                 <select class="form-control" id="source6">
-                                    <option value="1">项目状态</option>
+                                    <option value="1">请选择投标状态</option>
                                     <option value="2">等待通过</option>
                                     <option value="3">审核未通过</option>
                                 </select>
@@ -460,256 +461,95 @@
                     <thead>
                     <tr>
                         <th>序号</th>
+                        <th>投标编号</th>
+                        <th>投标时间</th>
+                        <th>投资人</th>
+                        <th>投资金额(元)</th>
+                        <th>红包金额(元)</th>
+                        <th>加息券利息</th>
+                        <th>投标状态</th>
                         <th>项目名称</th>
-                        <th>项目类型</th>
-                        <th>借款人</th>
-                        <th>期限模式</th>
-                        <th>借款期限(天)</th>
-                        <th>借款金额(元)</th>
-                        <th>年利率(%)</th>
-                        <th>募集开始时间</th>
-                        <th>募集结束时间</th>
                         <th>项目状态</th>
-                        <th>操作</th>
+                        <th>借款金额(元)</th>
+                        <th>借款期限(天)</th>
+                        <th>年利率(%)</th>
                     </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>1</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
+                            <td>tb1225544</td>
                             <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>初审待审核</td>
-                            <td>
-                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
-                            </td>
+                            <td><a href="#" class="link">方希林</a></td>
+                            <td>1234</td>
+                            <td>20</td>
+                            <td>12</td>
+                            <td>成功</td>
+                            <td><a href="#" class="link">江车贷123456</a></td>
+                            <td>募集中</td>
+                            <td>23,456</td>
+                            <td>120</td>
+                            <td>11.0</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
+                            <td>tb1225544</td>
                             <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>初审待审核</td>
-                            <td>
-                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
-                            </td>
+                            <td><a href="#" class="link">方希林</a></td>
+                            <td>1234</td>
+                            <td>20</td>
+                            <td>12</td>
+                            <td>成功</td>
+                            <td><a href="#" class="link">江车贷123456</a></td>
+                            <td>募集中</td>
+                            <td>23,456</td>
+                            <td>120</td>
+                            <td>11.0</td>
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
+                            <td>tb1225544</td>
                             <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>初审待审核</td>
-                            <td>
-                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
-                            </td>
+                            <td><a href="#" class="link">方希林</a></td>
+                            <td>1234</td>
+                            <td>20</td>
+                            <td>12</td>
+                            <td>成功</td>
+                            <td><a href="#" class="link">江车贷123456</a></td>
+                            <td>募集中</td>
+                            <td>23,456</td>
+                            <td>120</td>
+                            <td>11.0</td>
                         </tr>
                         <tr>
-                            <td>2</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
+                            <td>4</td>
+                            <td>tb1225544</td>
                             <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>初审待审核</td>
-                            <td>
-                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
-                            </td>
+                            <td><a href="#" class="link">方希林</a></td>
+                            <td>1234</td>
+                            <td>20</td>
+                            <td>12</td>
+                            <td>成功</td>
+                            <td><a href="#" class="link">江车贷123456</a></td>
+                            <td>募集中</td>
+                            <td>23,456</td>
+                            <td>120</td>
+                            <td>11.0</td>
                         </tr>
                         <tr>
-                            <td>1</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
+                            <td>5</td>
+                            <td>tb1225544</td>
                             <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>初审待审核</td>
-                            <td>
-                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
                             <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
-                            <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>初审待审核</td>
-                            <td>
-                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
-            <ul class="pagination-sm"></ul>
-        </div>
-        <!-- 已审核信息 -->
-        <div class="panel-body light-bg tab-content" id="hadAudit" style="display:none">
-            <section id="unseen">
-                <div class="panel-body" style="padding-left:0;">
-                    <div class="search-box">
-                        <form class="form-inline" role="form">
-                            <div class="form-group">
-                                <label class="control-label">搜审核项目：</label>
-                                <input type="text" class="form-control" placeholder="输入项目名称">
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">借款人：</label>
-                                <input type="text" class="form-control" placeholder="输入姓名或手机号">
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">项目状态：</label>
-                                <select class="form-control" id="source6">
-                                    <option value="1">项目状态</option>
-                                    <option value="2">等待通过</option>
-                                    <option value="3">审核未通过</option>
-                                </select>
-                            </div>
-                            <div class="form-group">   
-                                <button type="submit" class="btn btn-primary">查询</button>
-                                <button class="btn btn-refresh">清空条件</button>
-                            </div>
-                            <div class="form-group fr">   
-                                <button class="btn btn-info">导出Excel</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <table class="table table-bordered table-striped table-condensed table-new">
-                    <thead>
-                    <tr>
-                        <th>序号</th>
-                        <th>项目名称</th>
-                        <th>项目类型</th>
-                        <th>借款人</th>
-                        <th>期限模式</th>
-                        <th>借款期限(天)</th>
-                        <th>借款金额(元)</th>
-                        <th>年利率(%)</th>
-                        <th>募集开始时间</th>
-                        <th>募集结束时间</th>
-                        <th>项目状态</th>
-                        <th>操作</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
+                            <td>1234</td>
+                            <td>20</td>
+                            <td>12</td>
+                            <td>成功</td>
                             <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
+                            <td>募集中</td>
                             <td>23,456</td>
-                            <td>11.0</td>
-                            <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>复审通过</td>
-                            <td>-</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
                             <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
-                            <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>复审不通过</td>
-                            <td>
-                                <a href="opborrow_audit.html" class="btn btn-round btn-primary" style="padding:0px 5px;">审核</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
-                            <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>复审通过</td>
-                            <td>-</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
-                            <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>初审待审核</td>
-                            <td>-</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
-                            <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>终审通过</td>
-                            <td>-</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
-                            <td>新手标</td>
-                            <td><a href="#" class="link">方希林</a></td>
-                            <td>按月结算</td>
-                            <td>120</td>
-                            <td>23,456</td>
-                            <td>11.0</td>
-                            <td>2017-08-23 13:37:06</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>终审不通过</td>
-                            <td>-</td>
+                            <td>11.0</td></td>
                         </tr>
                     </tbody>
                 </table>
