--- a/business/borrow_published.html
+++ b/business/borrow_published.html
@@ -31,7 +31,8 @@
     
     <!-- MyStyle -->
     <link rel="stylesheet" type="text/css" href="../css/xjs.css" />
-
+    <!-- <base href="/"> -->
+    
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="js/ie8/ie8-responsive-file-warning.js"></script><![endif]-->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -107,12 +108,12 @@
                                 <li><a class="alast" href="opborrow_add.html">融资发布</a></li>
                                 <li  class="active"><a class="alast" href="borrow_published.html">已发布项目</a></li>
                                 <li><a class="alast" href="borrowlist.html">融资初审</a></li>
-                                <li><a class="alast" href="">融资复审</a></li>
-                                <li><a class="alast" href="">募集中项目</a></li>
-                                <li><a class="alast" href="">投标记录</a></li>
-                                <li><a class="alast" href="">融资终审</a></li>
-                                <li><a class="alast" href="">流标记录</a></li>
-                                <li><a class="alast" href="">项目高级搜索</a></li>
+                                <li><a class="alast" href="reborrowlist.html">融资复审</a></li>
+                                <li><a class="alast" href="raiselist.html">募集中项目</a></li>
+                                <li><a class="alast" href="bidlist.html">投标记录</a></li>
+                                <li><a class="alast" href="finaborrowlist.html">融资终审</a></li>
+                                <li><a class="alast" href="abortivelist.html">流标记录</a></li>
+                                <li><a class="alast" href="advanced_search.html">项目高级搜索</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
@@ -476,7 +477,7 @@
                     <tbody>
                         <tr>
                             <td>1</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
+                            <td><a href="borrow_detail.html" class="link">江车贷123456</a></td>
                             <td>新手标</td>
                             <td><a href="#" class="link">方希林</a></td>
                             <td>按月结算</td>
@@ -490,7 +491,7 @@
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
+                            <td><a href="borrow_detail.html" class="link">江车贷123456</a></td>
                             <td>乐享系列</td>
                             <td><a href="#" class="link">方希林</a></td>
                             <td>按日结算</td>
@@ -506,7 +507,7 @@
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
+                            <td><a href="borrow_detail.html" class="link">江车贷123456</a></td>
                             <td>乐享系列</td>
                             <td><a href="#" class="link">方希林</a></td>
                             <td>按日结算</td>
@@ -536,7 +537,7 @@
                         </tr>
                         <tr>
                             <td>5</td>
-                            <td><a href="#" class="link">江车贷123456</a></td>
+                            <td><a href="borrow_detail.html" class="link">江车贷123456</a></td>
                             <td>新手标</td>
                             <td><a href="#" class="link">方希林</a></td>
                             <td>按月结算</td>
