--- a/business/reborrowlist.html
+++ b/business/reborrowlist.html
@@ -83,6 +83,9 @@
         <!-- sidebar menu start-->
         <div class="leftside-navigation">
             <ul class="sidebar-menu" id="nav-accordion">
+                <!-- <li>
+                    <span style="display: block;line-height:30px; text-align:center;">一级菜单</span>
+                </li> -->
                 <li>
                     <a class="" href="index.html">
                         <i class="fa fa-home"></i>
@@ -104,8 +107,8 @@
                                 <li><a class="alast" href="borrow_order.html">融资预约</a></li>
                                 <li><a class="alast" href="opborrow_add.html">融资发布</a></li>
                                 <li><a class="alast" href="borrow_published.html">已发布项目</a></li>
-                                <li  class="active"><a class="alast" href="borrowlist.html">融资初审</a></li>
-                                <li><a class="alast" href="reborrowlist.html">融资复审</a></li>
+                                <li><a class="alast" href="borrowlist.html">融资初审</a></li>
+                                <li  class="active"><a class="alast" href="reborrowlist.html">融资复审</a></li>
                                 <li><a class="alast" href="raiselist.html">募集中项目</a></li>
                                 <li><a class="alast" href="bidlist.html">投标记录</a></li>
                                 <li><a class="alast" href="finaborrowlist.html">融资终审</a></li>
@@ -421,7 +424,7 @@
             <div class="nav-title"><span>融资初审</span></div>
         </div> -->
         <div class="tab-list" style="margin-bottom:20px;">
-            <a class="tab-item active" data-id="audit">初审待审核</a>
+            <a class="tab-item active" data-id="audit">复审待审核</a>
             <a class="tab-item" data-id="hadAudit">已审核信息</a>
         </div>
         <!-- 初审待审核 -->
