--- a/business/opborrow_audit.html
+++ b/business/opborrow_audit.html
@@ -31,7 +31,8 @@
     
     <!-- MyStyle -->
     <link rel="stylesheet" type="text/css" href="../css/xjs.css" />
-
+    <!-- <base href="/"> -->
+    
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="js/ie8/ie8-responsive-file-warning.js"></script><![endif]-->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -108,12 +109,12 @@
                                 <li><a class="alast" href="opborrow_add.html">融资发布</a></li>
                                 <li><a class="alast" href="borrow_published.html">已发布项目</a></li>
                                 <li class="active"><a class="alast" href="borrowlist.html">融资初审</a></li>
-                                <li><a class="alast" href="">融资复审</a></li>
-                                <li><a class="alast" href="">募集中项目</a></li>
-                                <li><a class="alast" href="">投标记录</a></li>
-                                <li><a class="alast" href="">融资终审</a></li>
-                                <li><a class="alast" href="">流标记录</a></li>
-                                <li><a class="alast" href="">项目高级搜索</a></li>
+                                <li><a class="alast" href="reborrowlist.html">融资复审</a></li>
+                                <li><a class="alast" href="raiselist.html">募集中项目</a></li>
+                                <li><a class="alast" href="bidlist.html">投标记录</a></li>
+                                <li><a class="alast" href="finaborrowlist.html">融资终审</a></li>
+                                <li><a class="alast" href="abortivelist.html">流标记录</a></li>
+                                <li><a class="alast" href="advanced_search.html">项目高级搜索</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
@@ -828,25 +829,5 @@
 <script src="../js/icheck/icheck-init.js"></script>
 <script src="../assets/iCheck-master/jquery.icheck.js"></script>business/
 <!--script for this page-->
-<script>
-    function addImage(obj){
-        var imgModel = '<div class="fileupload fileupload-new" data-provides="fileupload">'+
-                        '<div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">'+
-                            '<img src="http://www.placehold.it/200x150/EFEFEF/AAAAAA&amp;text=no+image" alt="" />'+
-                        '</div>'+
-                        '<div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>'+
-                        '<div>'+
-                           '<span class="btn btn-white btn-file">'+
-                           '<span class="fileupload-new"><i class="fa fa-paper-clip"></i>添加图片</span>'+
-                           '<span class="fileupload-exists"><i class="fa fa-undo"></i> 修改</span>'+
-                           '<input type="file" class="default" onchange="addImage()" />'+
-                           '</span>'+
-                            '<a href="#" class="btn btn-danger fileupload-exists" data-dismiss="fileupload"><i class="fa fa-trash"></i> 删除</a>'+
-                        '</div>'+
-                    '</div>';
-       $('#imgList').append(imgModel);
-    }
-
-</script>
 </body>
 </html>
