--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
                                 <span>合同管理</span>
                             </a>
                             <ul class="sub">
+                            	<li><a class="alast" href="">合同管理</a></li>
                                 <li><a class="alast" href="">合同发布</a></li>
                             </ul>
                         </li>
