--- a/business/opborrow_add.html
+++ b/business/opborrow_add.html
@@ -88,7 +88,7 @@
                     <span style="display: block;line-height:30px; text-align:center;">一级菜单</span>
                 </li> -->
                 <li>
-                    <a class="" href="index.html">
+                    <a class="" href="../index.html">
                         <i class="fa fa-home"></i>
                         <span>首页</span>
                     </a>
@@ -850,7 +850,7 @@
 <script type="text/javascript" src="../assets/ckeditor/ckeditor.js"></script>
 <!--icheck init radio -->
 <script src="../js/icheck/icheck-init.js"></script>
-<script src="../assets/iCheck-master/jquery.icheck.js"></script>business/
+<script src="../assets/iCheck-master/jquery.icheck.js"></script>
 <!--script for this page-->
 </body>
 </html>
