--- a/system/system_parameter.html
+++ b/system/system_parameter.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../images/favicon.png">
     <title>后台管理系统</title>
     <!--Core CSS -->
-    <base href="/">
+    
     <link href="../bs3/css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/bootstrap-reset.css" rel="stylesheet">
     <link href="../assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
@@ -32,7 +32,7 @@
     
     <!-- MyStyle -->
     <link rel="stylesheet" type="text/css" href="../css/xjs.css" />
-
+    <!-- <base href="/"> -->
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="js/ie8/ie8-responsive-file-warning.js"></script><![endif]-->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -87,7 +87,7 @@
                     <span style="display: block;line-height:30px; text-align:center;">一级菜单</span>
                 </li> -->
                 <li>
-                    <a class="" href="index.html">
+                    <a class="" href="../index.html">
                         <i class="fa fa-home"></i>
                         <span>首页</span>
                     </a>
