--- a/business/opborrow_audit.html
+++ b/business/opborrow_audit.html
@@ -88,7 +88,7 @@
                     <span style="display: block;line-height:30px; text-align:center;">一级菜单</span>
                 </li> -->
                 <li>
-                    <a class="" href="index.html">
+                    <a class="" href="../index.html">
                         <i class="fa fa-home"></i>
                         <span>首页</span>
                     </a>
