--- a/index.html
+++ b/index.html
@@ -101,14 +101,16 @@
                                 <span>融资管理</span>
                             </a>
                             <ul class="sub">
+                                <li><a class="alast" href="business/borrow_order.html">融资预约</a></li>
                                 <li><a class="alast" href="business/opborrow_add.html">融资发布</a></li>
+                                <li><a class="alast" href="business/borrow_published.html">已发布项目</a></li>
                                 <li><a class="alast" href="business/borrowlist.html">融资初审</a></li>
-                                <li><a class="alast" href="">融资复审</a></li>
-                                <li><a class="alast" href="">融资预约</a></li>
-                                <li><a class="alast" href="">投标记录</a></li>
-                                <li><a class="alast" href="">手动流标</a></li>
-                                <li><a class="alast" href="">投标状态</a></li>
-                                <li><a class="alast" href="">流标记录</a></li>
+                                <li><a class="alast" href="business/reborrowlist.html">融资复审</a></li>
+                                <li><a class="alast" href="business/raiselist.html">募集中项目</a></li>
+                                <li><a class="alast" href="business/bidlist.html">投标记录</a></li>
+                                <li><a class="alast" href="business/finaborrowlist.html">融资终审</a></li>
+                                <li><a class="alast" href="business/abortivelist.html">流标记录</a></li>
+                                <li><a class="alast" href="business/advanced_search.html">项目高级搜索</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
@@ -117,7 +119,7 @@
                                 <span>债权转让</span>
                             </a>
                             <ul class="sub">
-                                <li><a class="alast" href="">债权转让列表</a></li>
+                                <li><a class="alast" href="transfer/transferlist.html">债权转让列表</a></li>
                                 <li><a class="alast" href="">债权转让合同设置</a></li>
                                 <li><a class="alast" href="">债权转让规则配置</a></li>
                             </ul>
